RbA Build/src/objects/Financial_Configuration__c.object
<CustomObject>
    <description>Holds Financial configuration information for a particular store location</description>
    <fields>
        <fullName>ACH_Payment_Acct__c</fullName>
        <label>ACH Payment Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accts_Receivable_Acct__c</fullName>
        <label>Accts Receivable Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bond_Refund_Payment_Acct__c</fullName>
        <label>Bond Refund Payment Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Acct__c</fullName>
        <label>Cash Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Order_Adjustment_Acct__c</fullName>
        <label>Change Order Adjustment Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Acct__c</fullName>
        <label>Check Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Deposits_Acct__c</fullName>
        <label>Consumer Deposits Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_AmEx_Acct__c</fullName>
        <label>Credit Card AmEx Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Diners_Club_Acct__c</fullName>
        <label>Credit Card Diners Club Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Discover_Acct__c</fullName>
        <label>Credit Card Discover Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_VM_Acct__c</fullName>
        <label>Credit Card VM Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Refund_CC_Acct__c</fullName>
        <label>Customer Refund CC Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Refund_Check_Acct__c</fullName>
        <label>Customer Refund Check Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_on_Account_Acct__c</fullName>
        <label>Debit on Account Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Acct__c</fullName>
        <label>Discount Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Door_COGS_Acct__c</fullName>
        <label>Door COGS Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Labor_Credit_Acct__c</fullName>
        <label>External Labor Credit Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Labor_Debit_Acct__c</fullName>
        <label>External Labor Debit Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Adjustment_Acct__c</fullName>
        <label>Install Adjustment Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Materials_Acct__c</fullName>
        <label>Install Materials Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Materials_Cost_Acct__c</fullName>
        <label>Install Materials Cost Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installer_Bonus_Acct__c</fullName>
        <label>Installer Bonus Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Labor_Credit_Acct__c</fullName>
        <label>Internal Labor Credit Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Labor_Debit_Acct__c</fullName>
        <label>Internal Labor Debit Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Labor_Std_Hrly_Rate__c</fullName>
        <label>Internal Labor Standard Hourly Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Labor_Transfer_Acct__c</fullName>
        <label>Internal Labor Transfer Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Acct__c</fullName>
        <label>Inventory Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIP_External_Labor_Acct__c</fullName>
        <label>JIP External Labor Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIP_Internal_Labor_Acct__c</fullName>
        <label>JIP Internal Labor Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Discount_Acct__c</fullName>
        <label>Marketing Discount Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Display_Cost_Acct__c</fullName>
        <label>Marketing Display Cost Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Application_Pct__c</fullName>
        <description>% of Sale Price that is considered the amount of Materials applied to the job for job costing</description>
        <label>Material Application Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Materials_Acct__c</fullName>
        <label>Materials Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Misc_Service_Revenue_Acct__c</fullName>
        <label>Misc Service Revenue Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Receipts_Acct__c</fullName>
        <label>Miscellaneous Receipts Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSF_Check_Acct__c</fullName>
        <label>NSF Check Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_Refunds_Acct__c</fullName>
        <label>Permit Refunds Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_COGS_Acct__c</fullName>
        <label>Product COGS Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remake_Expense_Acct__c</fullName>
        <label>Remake Expense Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Rewards_Acct__c</fullName>
        <label>Renewal Rewards Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Sales_Negative_Acct__c</fullName>
        <label>Retail Sales Negative Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Sales_Positive_Acct__c</fullName>
        <label>Retail Sales Positive Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Expense_Acct__c</fullName>
        <label>Service Expense Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Labor_Application_Rate__c</fullName>
        <label>Service Labor Application Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Labor_Expense_Acct__c</fullName>
        <label>Service Labor Expense Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Labor_Transfer_Acct__c</fullName>
        <label>Service Labor Transfer Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Materials_Cost_Acct__c</fullName>
        <label>Service Materials Cost Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Revenue_Payment_Acct__c</fullName>
        <label>Service Revenue Payment Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Configuration__c</fullName>
        <description>parent  store configuration MD</description>
        <label>Store Configuration</label>
        <referenceTo>Store_Configuration__c</referenceTo>
        <relationshipLabel>Financial Configurations</relationshipLabel>
        <relationshipName>Financial_Configurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Uniform_Reimbursement_Acct__c</fullName>
        <label>Uniform Reimbursement Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Write_Off_Acct__c</fullName>
        <label>Write Off Acct</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Financial Configuration</label>
    <nameField>
        <displayFormat>FC-{00000}</displayFormat>
        <label>Financial Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>